<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.googlecode.luceneappengine</groupId>
	<artifactId>luceneappengine</artifactId>
	<version>5.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	
	<name>LuceneAppEngine</name>
	<url>https://${googlecode.host}</url>
	<description>A Lucene directory for Google App Engine.</description>
    <inceptionYear>2012</inceptionYear>
    <organization>
        <name>CoDeGeneration</name>
        <url>http://co-de-generation.blogspot.it/</url>
    </organization>

	<mailingLists>
		<mailingList>
			<name>Lucene App Engine Users List</name>
			<archive>http://groups.google.com/group/${googlecode.group.users}/topics</archive>
			<subscribe>http://groups.google.com/group/${googlecode.group.users}/subscribe</subscribe>
			<unsubscribe>http://groups.google.com/group/${googlecode.group.users}/subscribe</unsubscribe>
			<post>http://groups.google.com/group/${googlecode.group.users}/post</post>
		</mailingList>
		<mailingList>
			<name>Lucene App Engine Developers List</name>
			<archive>http://groups.google.com/group/${googlecode.group.developers}/topics</archive>
			<subscribe>http://groups.google.com/group/${googlecode.group.developers}/subscribe</subscribe>
			<unsubscribe>http://groups.google.com/group/${googlecode.group.developers}/subscribe</unsubscribe>
			<post>http://groups.google.com/group/${googlecode.group.developers}/post</post>
		</mailingList>
	</mailingLists>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.cloud</groupId>
				<artifactId>libraries-bom</artifactId>
				<version>26.4.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
					<configuration>
						<enablePreview>true</enablePreview>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.1.2</version>
					<configuration>
						<argLine>--enable-preview</argLine>
						<environmentVariables>
							<FIRESTORE_HOST>127.0.0.1:8080</FIRESTORE_HOST>
							<FIRESTORE_EMULATOR_HOST>127.0.0.1:8080</FIRESTORE_EMULATOR_HOST>
							<GOOGLE_CLOUD_PROJECT>demo-boh</GOOGLE_CLOUD_PROJECT>
						</environmentVariables>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.12.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.3</version>
                    <dependencies>
						<dependency>
							<groupId>org.apache.maven.scm</groupId>
							<artifactId>maven-scm-api</artifactId>
							<version>${wagon.scm.provider.version}</version>
						</dependency>
                        <dependency>
                            <groupId>org.apache.maven.scm</groupId>
                            <artifactId>maven-scm-provider-gitexe</artifactId>
                            <version>${wagon.scm.provider.version}</version>
                        </dependency>
                    </dependencies>
				</plugin>
                <plugin>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
				<plugin>
				    <artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.1.2</version>
				</plugin>
                <plugin>
                    <artifactId>maven-jxr-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-changes-plugin</artifactId>
                    <version>2.12.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>taglist-maven-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.8.1</version>
                </plugin>
			</plugins>
		</pluginManagement>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-scm</artifactId>
				<version>${wagon.scm.version}</version>
			</extension>
			<extension>
				<groupId>org.apache.maven.scm</groupId>
				<artifactId>maven-scm-manager-plexus</artifactId>
				<version>${wagon.scm.provider.version}</version>
			</extension>
			<extension>
				<groupId>org.apache.maven.scm</groupId>
				<artifactId>maven-scm-provider-gitexe</artifactId>
				<version>${wagon.scm.provider.version}</version>
			</extension>
		</extensions>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>2.0.0</version>
				<executions>
					<execution>
						<id>update-project-license</id>
						<goals>
							<goal>update-project-license</goal>
							<goal>add-third-party</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-scm</artifactId>
						<version>${wagon.scm.version}</version>
					</dependency>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-api</artifactId>
						<version>${wagon.scm.provider.version}</version>
					</dependency>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-manager-plexus</artifactId>
						<version>${wagon.scm.provider.version}</version>
					</dependency>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>${wagon.scm.provider.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<links>
						<link>https://javadoc.io/doc/org.apache.lucene/lucene-core/8.9.0/</link>
						<link>https://javadoc.io/doc/com.googlecode.objectify/objectify/5.1.22/</link>
					</links>
					<excludePackageNames>org.apache.lucene.*</excludePackageNames>
				</configuration>
			</plugin>
            <plugin>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<!-- explicitly define maven-deploy-plugin after other to force exec 
					order -->
				<artifactId>maven-deploy-plugin</artifactId>
				<executions>
					<execution>
						<id>deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-scm</artifactId>
						<version>${wagon.scm.version}</version>
					</dependency>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-manager-plexus</artifactId>
						<version>${wagon.scm.provider.version}</version>
					</dependency>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>${wagon.scm.provider.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<!-- Type "mvn appengine:devserver" to run and "mvn appengine:update" to upload to GAE. -->
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>appengine-maven-plugin</artifactId>
				<version>${gae.plugin.version}</version>
				<configuration>
				    <enableJarClasses>true</enableJarClasses>
					<jvmFlags>
						<jvmFlag>-Xdebug</jvmFlag>
						<jvmFlag>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000</jvmFlag>
						<jvmFlag>-noverify</jvmFlag>
					</jvmFlags>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerArgs>--enable-preview</compilerArgs>
					<annotationProcessorPaths combine.children="append">
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<maven.compiler.source>17</maven.compiler.source>
		<jdk.version>17</jdk.version>
		<release.version>17</release.version>
		<wagon.scm.version>3.5.2</wagon.scm.version>
		<wagon.scm.provider.version>1.13.0</wagon.scm.provider.version>
		<pushChanges>false</pushChanges>

		<license.licenseName>apache_v2</license.licenseName>
		<license.generateBundle>true</license.generateBundle>
		<license.includedGroups>org.apache.lucene</license.includedGroups>
		<license.includedArtifacts>lucene-core</license.includedArtifacts>

		<lucene.version>9.0.0</lucene.version>

		<slf4j.version>1.7.13</slf4j.version>

		<gae.plugin.version>2.4.4</gae.plugin.version>
		<lombok.version>1.18.26</lombok.version>
		<!-- custom -->
		<repository.project.name>luceneappengine</repository.project.name>
		<!-- googlecode -->
		<googlecode.group.users>lucene-appengine</googlecode.group.users>
		<googlecode.group.developers>lucene-appengine</googlecode.group.developers>
		<googlecode.project>${repository.project.name}</googlecode.project>
		<googlecode.host>${googlecode.project}.googlecode.com</googlecode.host>
		<!-- custom scm configurations -->
		<github.username>UltimaPhoenix</github.username>
		<bitbucket.username>Dark_Phoenix</bitbucket.username>
        <gpg.keyname>fabio.grucci@gmail.com</gpg.keyname>
	</properties>
	<distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <name>Sonatype OSSRH Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <name>Sonatype OSSRH Releases</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>com.google.cloud</groupId>
			<artifactId>google-cloud-firestore</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene.version}</version>
			<!-- thanks to this scope user should not copy RamUsageEstimator class -->
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-analysis-common</artifactId>
			<version>${lucene.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queries</artifactId>
			<version>${lucene.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>${lucene.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.23.1</version>
			<scope>test</scope>
		</dependency>

		<!-- GAE libraries for local testing as described here: http://code.google.com/appengine/docs/java/howto/unittesting.html -->
<!--		<dependency>-->
<!--			<groupId>com.google.appengine</groupId>-->
<!--			<artifactId>appengine-api-stubs</artifactId>-->
<!--			<version>${gae.version}</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.google.appengine</groupId>-->
<!--			<artifactId>appengine-testing</artifactId>-->
<!--			<version>${gae.version}</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
	</dependencies>

	<scm>
	    <connection>scm:git:git@github.com:${github.username}/${repository.project.name}.git</connection>
	    <developerConnection>scm:git:git@github.com:${github.username}/${repository.project.name}.git</developerConnection>
	    <url>git@github.com:${github.username}/${repository.project.name}.git</url>
    <tag>HEAD</tag>
  </scm>

	<issueManagement>
		<url>https://github.com/${github.username}/${repository.project.name}/issues</url>
		<system>GitHub</system>
	</issueManagement>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
      		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>fabio.grucci</id>
			<name>UltimaPhoenix</name>
			<email>fabio.grucci[ at ]gmail.com</email>
			<roles>
				<role>Project owner</role>
				<role>Main contributor</role>
			</roles>
		</developer>
	</developers>
    
    <reporting>
        <plugins>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <links>
						<link>https://javadoc.io/doc/org.apache.lucene/lucene-core/8.9.0/</link>
						<link>https://javadoc.io/doc/com.googlecode.objectify/objectify/5.1.22/</link>
                    </links>
                    <excludePackageNames>org.apache.lucene.*</excludePackageNames>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jxr-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>taglist-maven-plugin</artifactId>
                <configuration>
                    <tagListOptions>
                        <tagClasses>
                            <tagClass>
                                <displayName>Todo</displayName>
                                <tags>
                                    <tag>
                                        <matchString>TODO</matchString>
                                        <matchType>ignoreCase</matchType>
                                    </tag>
                                </tags>
                            </tagClass>
                            <tagClass>
                                <displayName>FIXME</displayName>
                                <tags>
                                    <tag>
                                        <matchString>FIXME</matchString>
                                        <matchType>ignoreCase</matchType>
                                    </tag>
                                </tags>
                            </tagClass>
                            <tagClass>
                                <displayName>XXX</displayName>
                                <tags>
                                    <tag>
                                        <matchString>XXX</matchString>
                                        <matchType>ignoreCase</matchType>
                                    </tag>
                                </tags>
                            </tagClass>
                        </tagClasses>
                    </tagListOptions>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-changes-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>dependency-updates-report</report>
                            <report>plugin-updates-report</report>
                            <report>property-updates-report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>
    
</project>
